--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "^5.0.1",
+    "swiper": "^11.0.5",
     "tailwindcss": "^3.3.6"
   },
   "scripts": {
